--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "format": "npx prettier --write \"**/*.{js,ts,jsx,tsx,cjs,cts,mjs,mts,vue,astro,ml,css,scss,sass}\""
   },
   "dependencies": {
+    "@types/ws": "^8.18.1",
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "ws": "^8.18.3",
     "zod": "3.23.8"
   },
   "devDependencies": {
